Bug 1069646: scale frame rate initialization in webrtc media_opimization r=gcp